@@ -42,7 +42,7 @@ public class TeamVelocityDAO implements TeamListDAO<TeamVelocity> {
 
 		// Remove last sprint - it is current, hence not finished sprint - its
 		// statistics are not final
-		list.remove(list.size() - 1);
+		list.removeLast();
 
 		// Return list of sprints
 		return list;
